# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py
page_analyzer/db/: connection.py
page_analyzer/models/: check_model.py  url_model.py
page_analyzer/routes/: main.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
page_analyzer/utils/: check_site.py  normalize_url.py  validators.py
