[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "livereload>=2.7.1",
    "ruff>=0.15.12",
]

[tool.vercel]
entrypoint = "page_analyzer.app:app"
