[project]
name = "hexlet-code"
version = "0.1.0"
description = "A web application for evaluating websites for SEO suitability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "livereload>=2.7.1",
    "ruff>=0.15.12",
]
